--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "accepts": "^2.0.0",
